[gd_scene load_steps=10 format=2]

[ext_resource path="res://textures/Plant.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlantEnemy.gd" type="Script" id=2]
[ext_resource path="res://textures/poisoncloud.png" type="Texture" id=3]
[ext_resource path="res://scripts/DamageArea.gd" type="Script" id=4]
[ext_resource path="res://scripts/Hitbox.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 22 )

[sub_resource type="CircleShape2D" id=3]
radius = 44.1022

[sub_resource type="CircleShape2D" id=2]
radius = 145.0

[sub_resource type="GDScript" id=4]
script/source = "extends Timer



func _on_PlantEnemy_startTimer():
	start()


func _on_PlantEnemy_stopTimer():
	stop()
"

[node name="PlantEnemy" type="Node2D"]
script = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 5 )
entity_path = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 1 )

[node name="MeleeArea" type="Area2D" parent="KinematicBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/MeleeArea"]
visible = false
shape = SubResource( 3 )

[node name="GasArea" type="Area2D" parent="KinematicBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 4 )
playerDamage = 1.0
mechDamage = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/GasArea"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="KinematicBody2D/GasArea"]
wait_time = 3.0
script = SubResource( 4 )

[node name="GasClouds" type="Node2D" parent="."]
visible = false

[node name="GasCloud" type="Sprite" parent="GasClouds"]
position = Vector2( -68, -38 )
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud2" type="Sprite" parent="GasClouds"]
position = Vector2( -38, -67 )
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud3" type="Sprite" parent="GasClouds"]
position = Vector2( 23, -73 )
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud4" type="Sprite" parent="GasClouds"]
position = Vector2( 95, -30 )
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud5" type="Sprite" parent="GasClouds"]
position = Vector2( 82, -81 )
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud6" type="Sprite" parent="GasClouds"]
position = Vector2( 132, -22 )
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud7" type="Sprite" parent="GasClouds"]
position = Vector2( -131, -16 )
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud8" type="Sprite" parent="GasClouds"]
position = Vector2( -112, -64 )
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud9" type="Sprite" parent="GasClouds"]
position = Vector2( -59, -92 )
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud10" type="Sprite" parent="GasClouds"]
position = Vector2( 36, -40 )
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud11" type="Sprite" parent="GasClouds"]
position = Vector2( 6, -110 )
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud12" type="Sprite" parent="GasClouds"]
position = Vector2( 68, 38 )
rotation = -3.14159
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud13" type="Sprite" parent="GasClouds"]
position = Vector2( 38, 67 )
rotation = -3.14159
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud14" type="Sprite" parent="GasClouds"]
position = Vector2( -23, 73 )
rotation = -3.14159
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud15" type="Sprite" parent="GasClouds"]
position = Vector2( -95, 30 )
rotation = -3.14159
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud16" type="Sprite" parent="GasClouds"]
position = Vector2( -82, 81 )
rotation = -3.14159
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud17" type="Sprite" parent="GasClouds"]
position = Vector2( -132, 22 )
rotation = -3.14159
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud18" type="Sprite" parent="GasClouds"]
position = Vector2( 131, 16 )
rotation = -3.14159
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud19" type="Sprite" parent="GasClouds"]
position = Vector2( 112, 64 )
rotation = -3.14159
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud20" type="Sprite" parent="GasClouds"]
position = Vector2( 59, 92 )
rotation = -3.14159
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud21" type="Sprite" parent="GasClouds"]
position = Vector2( -36, 40 )
rotation = -3.14159
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GasCloud22" type="Sprite" parent="GasClouds"]
position = Vector2( -6.00001, 110 )
rotation = -3.14159
texture = ExtResource( 3 )
offset = Vector2( -7, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[connection signal="startTimer" from="." to="KinematicBody2D/GasArea/Timer" method="start"]
[connection signal="stopTimer" from="." to="KinematicBody2D/GasArea/Timer" method="stop"]
[connection signal="area_entered" from="KinematicBody2D/MeleeArea" to="KinematicBody2D/MeleeArea" method="_on_DamageArea_area_entered"]
[connection signal="area_entered" from="KinematicBody2D/GasArea" to="." method="_on_GasArea_area_entered"]
[connection signal="area_entered" from="KinematicBody2D/GasArea" to="KinematicBody2D/GasArea" method="_on_DamageArea_area_entered"]
[connection signal="area_exited" from="KinematicBody2D/GasArea" to="." method="_on_GasArea_area_exited"]
[connection signal="entityDamaged" from="KinematicBody2D/GasArea" to="." method="_on_GasArea_entityDamaged"]
[connection signal="timeout" from="KinematicBody2D/GasArea/Timer" to="." method="_on_Timer_timeout"]
